First commit of working code

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,28 @@
 *.exe
 *.out
 *.app
+test/test
+*.root
+cpp/test
+*.pyc
+*.pdf
+*.dvi
+*.log
+*.aux
+*.pyg
+*.pytxcode
+*.gz
+cpp/clas12_ana
+cpp_hipo/clas12_ana
+cpp_hipo/hipo/clas12_ana
+.DS_Store
+*.ipynb
+*.csv
+cpp_reindex/clas12_ana
+cmake-build-debug
+.idea
+.vscode
+build
+cpp/clas12_analysis
+*.phd
+*.class
