--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: docker version
       run : docker --version
-    - name: docker build
+    - name: Build
       run: |
         cp .github/workflows/build.sh . && \
         chmod +x build.sh && \
